# project_blockchain_client

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: CI.yml
PicoSHA2/: CMakeLists.txt
cmake/: FindGcov.cmake  FindLcov.cmake  Findcodecov.cmake   config.cmake
include/: client.hpp
sources/: client.cpp  main.cpp
